# PriceSentry

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CICD.md  DEVELOPER_README.md  DOCKER.md  Dockerfile  Dockerfile.backend  QUICKSTART.md  README.md  README_CN.md  README_zh.md  USAGE.md  binance_mover.py  config.py  docker-compose.yml  generate_config.py  generate_monitoring_report.py  main.py  monitoring_dashboard.py  pyproject.toml  pytest.ini  quick_start.sh  requirements.txt  simple_check.py  sitecustomize.py  start.sh  symbols.txt  test.py  test_api.py  test_dingding_photo.py
.github/workflows/: ci-cd.yml  dependency-analysis.yml  docker-build.yml  main.yml  quality-gate.yml
config/: config.json  config.yaml  config.yaml.example  supported_markets.json  symbols.txt
core/: api.py  notifier.py  sentry.py
dashboard/: Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/lib/: api.ts  parse-top-mover.ts
dashboard/tests/: parse-top-mover.test.mjs  responsive-tabs.test.mjs
docker/backend/: Dockerfile  entrypoint.sh
docker/dashboard/: Dockerfile
docs/: CI_CD.md  CONFIG.md  CONFIG_CN.md  README.md  README_CN.md
exchanges/: __init__.py  base.py  binance.py  bybit.py  exchange.py  exchanges.py  okx.py
notifications/: dingding.py  telegram.py
src/app/: cli.py  config_check.py  config_generator.py  monitoring_report.py  runner.py
src/core/: api.py  config_manager.py  notifier.py  sentry.py
src/exchanges/: base.py  binance.py  bybit.py  okx.py
src/notifications/: telegram_bot_service.py
src/utils/: cache_manager.py  chart.py  config_io.py  config_validator.py  default_symbols.py  get_exchange.py  load_config.py  match_symbols.py  monitor_top_movers.py  notification_history_store.py  send_notifications.py  setup_logging.py  supported_markets.py  telegram_recipient_store.py  top_volume_symbols.py
telegram/: notifier.py
tests/: conftest.py  quick_test.py  run_api_tests.py  test_api_config.py  test_cache_manager.py  test_config_manager.py  test_config_validator.py  test_core_notifier.py  test_core_sentry.py  test_error_handler.py  test_exchanges_base.py  test_exchanges_binance.py  test_integration.py  test_notification_enhancements.py  test_notification_history_store.py  test_notifications_dingding.py  test_notifications_telegram.py  test_rest_api.py  test_send_notifications.py  test_telegram_recipient_store.py  test_utils_get_exchange.py  test_utils_load_config.py  test_utils_match_symbols.py  test_utils_parse_timeframe.py  test_websocket.py
tools/: init_config.py  update_markets.py
tools/manual_tests/: api_endpoints.py
utils/: api.py  cache_manager.py  chart.py  config_validator.py  error_handler.py  file_io.py  getExchange.py  get_exchange.py  loadConfig.py  loadSymbolsFromFile.py  load_config.py  matchSymbols.py  match_symbols.py  monitorTopMovers.py  monitor_top_movers.py  parseTimeframe.py  parse_timeframe.py  performance_monitor.py  priceUtils.py  price_analysis.py  sendNotifications.py  send_notifications.py  setup_logging.py
(+7 files in other folders)
