[project]
name = "PriceSentry"
version = "1.0.0"
description = "A lightweight cryptocurrency contract price monitoring tool built for traders and enthusiasts"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Xeron", email = "xeron2333@gmail.com" },
]
dependencies = [
    "ccxt>=4.1.80",
    "PyYAML>=6.0.1",
    "expiringdict>=1.2.1",
    "pytz>=2024.1",
    "websockets>=11.0.3",
    "plotly>=5.24.1",
    "kaleido>=0.2.1",
]

[project.urls]
Homepage = "https://github.com/Xeron2000/PriceSentry"
Issues = "https://github.com/Xeron2000/PriceSentry/issues"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.1"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
include = ["core", "exchanges", "notifications", "utils"]